<resources>
    <string name="app_name">Mileprix</string>
    <string name="welcome">Welcome!</string>
    <string name="login_with_phone_number">Login with Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="send_otp">send otp</string>
    <string name="otp">OTP</string>
    <string name="x_x_x_x_x_x">x x x - x x x</string>
    <string name="submit">submit</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="one_more_step_enter_your_name_to_get_started">One more step. Enter Your Name to get started</string>
    <string name="please_enter_otp_sent_to_your_given_phone_number">Please enter OTP sent to your given phone number</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="continuee">Continue</string>
    <string name="past_orders">Past Orders</string>
    <string name="active_orders">Active Orders</string>
    <string name="login_successful">Login Successful</string>
    <string name="you_are_successfully_logged_in_to_your_account">You are successfully logged in to your account.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>

</resources>